<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yosepbahtiar.klasifikasikodesurat.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/info_tentang_aplikasi"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sumber_data"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/border"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/cara_pakai_aplikasi"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/btn_cari_kode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_rounded"
                android:clickable="true"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="methodTombol"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:text="@string/tombol_cari_kode"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_cari_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_rounded"
                android:clickable="true"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="methodTombol"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:text="@string/tombol_cari_nama"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>