<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yosepbahtiar.klasifikasikodesurat.DetailActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/title_activity_detail"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvTingkat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF0F0F"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:text="@string/detail_kode"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000FF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvKode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="7dp"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:text="@string/detail_nama"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000FF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="7dp"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:text="@string/detail_catatan"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000FF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvCatatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="7dp"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>